--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,245 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #2F313A;
+}
+
+html {
+  height: 100%;
+}
+
+.todoApp {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.todoHeader {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 65px;
+  background: #262831;
+  box-shadow:
+    0 1.7px 2.2px rgba(0, 0, 0, 0.07),
+    0 4.1px 5.3px rgba(0, 0, 0, 0.05),
+    0 7.8px 10px rgba(0, 0, 0, 0.042),
+    0 13.8px 17.9px rgba(0, 0, 0, 0.035),
+    0 25.9px 33.4px rgba(0, 0, 0, 0.028),
+    0 62px 80px rgba(0, 0, 0, 0.02);
+}
+
+.todoTitle {
+  width: 100%;
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: 9px;
+  text-align: center;
+  color: #D4A418;
+  text-transform: uppercase;
+}
+
+.todoItem {
+  display: flex;
+  justify-content: center;
+}
+
+ul {
+  padding: 20px;
+  width: 100%;
+  color: #D4A418;
+  max-width: 850px;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #2F313A;
+  border: 0.5px solid #3e3f42;
+  box-sizing: border-box;
+  height: 55px;
+  box-shadow: 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 100px 80px rgba(0, 0, 0, 0.07);
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  color: #D4A418;
+  line-height: 21px;
+  text-align: left;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  padding: 0 15px;
+
+}
+
+.todoContent {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.addTask {
+  position: relative;
+  display: flex;
+  height: 55px;
+  margin-top: 50px;
+  max-width: 850px;
+  justify-content: center;
+  width: 100%;
+}
+
+input[type=checkbox] {
+  cursor: pointer;
+}
+
+input[type=checkbox]:checked+.todoLabel {
+  color: #404760;
+  text-decoration: line-through;
+}
+
+input[type=text] {
+  background: transparent;
+  border: solid 0.5px #5fa9ff;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  border-radius: 5px;
+  color: #D4A418;
+  width: 100%;
+}
+
+.inputAdd {
+  height: 50px;
+  max-width: 850px;
+  outline: none;
+  margin: 30px 20px;
+}
+
+.todoInput {
+  margin: 0 20px;
+}
+
+.btnAdd {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  height: 50px;
+  width: 100px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #5fa9ff;
+}
+
+.filters {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 70px 20px 0;
+  width: 100%;
+  max-width: 850px;
+}
+
+.btnFilter {
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  outline: none;
+  background: #5fa9ff;
+  background: linear-gradient(0deg, #5fa9ff 0%, #167ef4 100%);
+  border: none;
+  margin-bottom: 20px;
+}
+
+.btnFilter:hover,
+.btnFilter[aria-pressed="true"] {
+  background: #0077ff;
+  background: linear-gradient(0deg, #0077ff 0%, #0057b9 100%);
+  box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, .5),
+    -4px -4px 6px 0 rgba(67, 72, 78, 0.5),
+    inset -4px -4px 6px 0 rgba(0, 0, 0, .2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+
+.todoContainer {
+  width: 100%;
+}
+
+.todoBtn {
+  margin: 0 10px;
+  background: transparent;
+  border: none;
+  color: #5fa9ff;
+  cursor: pointer;
+}
+
+.nbTasks {
+  text-align: center;
+  color: #D4A418;
+  font-size: 12px;
+}
+
+.todoEdit {
+  display: flex;
+  width: 100%;
+}
+
+.editInput {
+  display: flex;
+  width: 50%;
+}
+
+.editBtn {
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+}
+
+.editBtnContent {
+  background: transparent;
+  border: none;
+  color: #5fa9ff;
+  cursor: pointer;
+}
+
+.danger {
+  color: crimson;
+}
+
+@media (max-width: 510px) {
+  .filters {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .btnFilter {
+    width: 100%;
+  }
+
+  input[type="text"] {
+    text-align: left;
+    /*padding-left: 20px;*/
+  }
+
+  .editInput {
+    width: 70%;
+  }
+
+  .editBtn {
+    width: 30%;
+  }
 }
